--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- This script loads the official Google Identity Services (GIS) library -->
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+
     <div class="container">
         <!-- Logged Out View -->
         <div id="loggedOutView">
