--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Authentication Hub</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
@@ -31,11 +31,7 @@
         <!-- Logged In View -->
         <div id="loggedInView" class="hidden">
             <header class="user-header">
-                <img id="userAvatar" src="" alt="User Avatar">
-                <div>
-                    <h2 id="userName"></h2>
-                    <p id="userEmail"></p>
-                </div>
+                <h2>Authentication Successful</h2>
                 <button id="logoutButton" class="button-secondary">Logout</button>
             </header>
             <main>
@@ -64,6 +60,6 @@
             <div class="spinner"></div>
         </div>
     </div>
-    <script src="scripts.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
