--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     
     <!-- Lucide Icons -->
-    <script src="https://unpkg.com/lucide-static@latest/dist/lucide.min.js"></script>
+    <script src="https://unpkg.com/lucide-static@latest/dist/lucide.min.js" defer></script>
 
     <!-- App Scripts -->
     <script src="https://accounts.google.com/gsi/client" async defer></script>
@@ -114,6 +114,6 @@
         </div>
     </div>
     
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
