--- a/frontend/redirect.html
+++ b/frontend/redirect.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     
     <!-- Lucide Icons -->
-    <script src="https://unpkg.com/lucide-static@latest/dist/lucide.min.js"></script>
+    <script src="https://unpkg.com/lucide-static@latest/dist/lucide.min.js" defer></script>
 
     <script>
         tailwind.config = {
@@ -45,10 +45,6 @@
         </div>
     </div>
 
-    <script src="redirect.js"></script>
-    <script>
-        // Render icons on page load
-        lucide.createIcons();
-    </script>
+    <script src="redirect.js" defer></script>
 </body>
 </html>
