--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,63 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="referrer" content="no-referrer">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://accounts.google.com; connect-src 'self' https://accounts.google.com; img-src 'self' data:; style-src 'self' https://fonts.googleapis.com 'unsafe-inline'; font-src https://fonts.gstatic.com; frame-ancestors 'none'; base-uri 'self'; form-action 'self'">
     <title>Google Authentication Hub</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- This script loads the official Google Identity Services (GIS) library -->
+    <noscript>
+        <div class="noscript-warning">JavaScript is required to use this page.</div>
+    </noscript>
+
+    <!-- Google Identity Services -->
     <script src="https://accounts.google.com/gsi/client" async defer></script>
 
     <div class="container">
         <!-- Logged Out View -->
-        <div id="loggedOutView">
+        <div id="loggedOutView" aria-live="polite">
             <header>
                 <h1>Google Authentication Hub</h1>
                 <p>Securely obtain API tokens for your applications.</p>
             </header>
             <main>
-                <button id="loginButton" class="button-primary">
-                    <svg aria-hidden="true" height="20" viewBox="0 0 24 24" width="20"><path d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" fill="#4285F4"></path><path d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z" fill="#34A853"></path><path d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z" fill="#FBBC05"></path><path d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z" fill="#EA4335"></path><path d="M1 1h22v22H1z" fill="none"></path></svg>
+                <button id="loginButton" class="button-primary" type="button">
+                    <svg aria-hidden="true" height="20" viewBox="0 0 24 24" width="20" focusable="false">
+                        <path d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" fill="#4285F4"></path>
+                        <path d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z" fill="#34A853"></path>
+                        <path d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z" fill="#FBBC05"></path>
+                        <path d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z" fill="#EA4335"></path>
+                        <path d="M1 1h22v22H1z" fill="none"></path>
+                    </svg>
                     <span>Sign In with Google</span>
                 </button>
             </main>
         </div>
 
         <!-- Logged In View -->
-        <div id="loggedInView" class="hidden">
+        <div id="loggedInView" class="hidden" aria-live="polite">
             <header class="user-header">
                 <h2>Authentication Successful</h2>
-                <button id="logoutButton" class="button-secondary">Logout</button>
+                <button id="logoutButton" class="button-secondary" type="button">Logout</button>
             </header>
             <main>
                 <div class="token-container">
                     <h3>Access Token</h3>
                     <p>A short-lived token (1 hour) to access the API directly.</p>
                     <div class="token-box">
-                        <textarea id="accessToken" readonly></textarea>
-                        <button class="copy-button" data-target="accessToken">Copy</button>
+                        <textarea id="accessToken" readonly aria-readonly="true" spellcheck="false" wrap="off"></textarea>
+                        <button class="copy-button" data-target="accessToken" type="button">Copy</button>
                     </div>
+                    <p><strong>Expires:</strong> <span id="tokenExpiry">unknown</span></p>
                 </div>
                 <div class="token-container">
                     <h3>Refresh Token</h3>
                     <p>A long-lived token used to get new access tokens. Store this securely. It is only provided on the first login/consent.</p>
                     <div class="token-box">
-                        <textarea id="refreshToken" readonly></textarea>
-                        <button class="copy-button" data-target="refreshToken">Copy</button>
+                        <textarea id="refreshToken" readonly aria-readonly="true" spellcheck="false" wrap="off"></textarea>
+                        <button class="copy-button" data-target="refreshToken" type="button">Copy</button>
                     </div>
-                    <p id="refreshTokenWarning" class="warning-text hidden">Not provided on this login. To get a new one, you must <a href="https://myaccount.google.com/permissions" target="_blank">revoke app access</a> and sign in again.</p>
+                    <p id="refreshTokenWarning" class="warning-text hidden">
+                        Not provided on this login. To get a new one, you must
+                        <a href="https://myaccount.google.com/permissions" target="_blank" rel="noopener noreferrer">revoke app access</a>
+                        and sign in again.
+                    </p>
                 </div>
             </main>
         </div>
 
         <!-- Loading Spinner -->
-        <div id="loadingSpinner" class="hidden">
+        <div id="loadingSpinner" class="hidden" role="status" aria-live="assertive">
             <div class="spinner"></div>
+            <span class="visually-hidden">Loading…</span>
         </div>
     </div>
-    <script src="script.js"></script>
+
+    <script src="script.js" defer></script>
 </body>
 </html>
